[package]
name = "iggy-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iggy = "0.0.114"
tokio = "1.33.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[[bin]]
name = "consumer"
path = "src/consumer/main.rs"

[[bin]]
name = "producer"
path = "src/producer/main.rs"
